--- a/Data_analysisi_agent.ipynb
+++ b/Data_analysisi_agent.ipynb
@@ -473,6 +473,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# updated the tools section "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
